Saved results for exp 3.5K

--- a/notebooks/out_of_domain_uncertainty_rich_income_3.5K/Income_2018-Batch2.ipynb
+++ b/notebooks/out_of_domain_uncertainty_rich_income_3.5K/Income_2018-Batch2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1b5f883d",
+   "id": "d6496d1d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.270469Z",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c0c8bce4",
+   "id": "9cb8e0fb",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.270732Z",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b472c62f",
+   "id": "678a20d3",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.270792Z",
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "1127eb14",
+   "id": "6abd81ea",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.270840Z",
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "73721499",
+   "id": "d0a7fda0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.270874Z",
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "25a4f166",
+   "id": "1fa49d52",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.561791Z",
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0d83a4b8",
+   "id": "4775dd4e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.569809Z",
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a9977e08",
+   "id": "ad024560",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.579999Z",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0cb0122",
+   "id": "70f56ce4",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "30bf6d13",
+   "id": "ad0aa286",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:43.760203Z",
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e517a98",
+   "id": "30749a09",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4d198a81",
+   "id": "bff242c2",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:43.786131Z",
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "292b5c5f",
+   "id": "66450e7d",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -229,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "27a8eb0c",
+   "id": "8137c245",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:43.809452Z",
@@ -259,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "234c2090",
+   "id": "a8e87d52",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:44.166649Z",
@@ -276,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "bf93bc2d",
+   "id": "ca128f77",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:44.193063Z",
@@ -288,7 +288,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current session uuid:  99df3a37-a84e-4824-bbe7-cc25fc0e4bd5\n"
+      "Current session uuid:  67e013b0-34ce-4d6e-95c9-bb8267b5ee8e\n"
      ]
     }
    ],
@@ -296,15 +296,15 @@
     "import uuid\n",
     "\n",
     "custom_table_fields_dct = {\n",
-    "    'session_uuid': str(uuid.uuid4()),\n",
-    "    # 'session_uuid': '',\n",
+    "#     'session_uuid': str(uuid.uuid4()),\n",
+    "    'session_uuid': '67e013b0-34ce-4d6e-95c9-bb8267b5ee8e',\n",
     "}\n",
     "print('Current session uuid: ', custom_table_fields_dct['session_uuid'])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5429fb5b",
+   "id": "1f601dba",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "38822285",
+   "id": "37ef7e02",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:47.270301Z",
@@ -447,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "54f75202",
+   "id": "46ae4fcf",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:47.325807Z",
@@ -473,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "5be4e2ab",
+   "id": "08c903fe",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:50.275940Z",
@@ -607,7 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "72417477",
+   "id": "a232ab8e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:50.306407Z",
@@ -633,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "5f83a7ed",
+   "id": "71414242",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:50.348230Z",
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "feee0588",
+   "id": "660828b8",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9492ff97",
+   "id": "14163e84",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -663,8 +663,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "a1b61aa4",
+   "execution_count": 14,
+   "id": "0bcb2215",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:50.350962Z",
@@ -680,8 +680,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "e2a40922",
+   "execution_count": 15,
+   "id": "088b0a4d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:50.392905Z",
@@ -702,8 +702,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "3075116d",
+   "execution_count": 16,
+   "id": "1de7a99a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:39:24.694664Z",
@@ -715,7 +715,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-22 18:39:02 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2023-11-05 15:07:25 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -725,16 +725,18 @@
      "text": [
       "{'dataset_split_seed': 100,\n",
       " 'experiment_iteration': 'Exp_iter_1',\n",
-      " 'fair_intervention_params_lst': '[0.0]',\n",
+      " 'fair_intervention_params_lst': '[0.7]',\n",
       " 'model_init_seed': 100,\n",
-      " 'session_uuid': '99df3a37-a84e-4824-bbe7-cc25fc0e4bd5'}\n"
+      " 'session_uuid': '67e013b0-34ce-4d6e-95c9-bb8267b5ee8e'}\n",
+      "\n",
+      "\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-22 18:39:02 experiment_interface.py INFO    : Start dataset preprocessing\n",
+      "2023-11-05 15:07:25 experiment_interface.py INFO    : Start dataset preprocessing\n",
       "INFO:root:Start dataset preprocessing\n"
      ]
     },
@@ -742,9 +744,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "In-domain full_df.shape --  (20000, 9)\n",
-      "In-domain init_features_df.shape --  (20000, 10)\n",
-      "In-domain number of rows in X_train_val --  10000\n",
+      "In-domain full_df.shape --  (13500, 9)\n",
+      "In-domain init_features_df.shape --  (13500, 10)\n",
+      "In-domain number of rows in X_train_val --  3500\n",
       "In-domain number of rows in X_test --  10000\n"
      ]
     },
@@ -752,7 +754,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-22 18:39:03 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2023-11-05 15:07:26 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n"
      ]
     },
@@ -768,7 +770,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "82c50b73f4eb49ecb6749e915f12fb00",
+       "model_id": "50d35440adca4716b813182a3f049ca5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -783,7 +785,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-22 18:39:03 experiment_interface.py INFO    : Start fairness intervention\n",
+      "2023-11-05 15:07:26 experiment_interface.py INFO    : Start fairness intervention\n",
       "INFO:root:Start fairness intervention\n"
      ]
     },
@@ -791,14 +793,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "intervention_param:  0.0\n"
+      "intervention_param:  0.7\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-22 18:41:17 experiment_interface.py INFO    : Fairness intervention is completed\n",
+      "2023-11-05 15:08:50 experiment_interface.py INFO    : Fairness intervention is completed\n",
       "INFO:root:Fairness intervention is completed\n"
      ]
     },
@@ -883,8 +885,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.242279</td>\n",
-       "      <td>0.148651</td>\n",
+       "      <td>1.225035</td>\n",
+       "      <td>0.140245</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25747</th>\n",
@@ -907,8 +909,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.501591</td>\n",
-       "      <td>-2.274840</td>\n",
+       "      <td>1.484879</td>\n",
+       "      <td>-2.282626</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13795</th>\n",
@@ -931,8 +933,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.399515</td>\n",
-       "      <td>0.148651</td>\n",
+       "      <td>0.315581</td>\n",
+       "      <td>0.064531</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>68724</th>\n",
@@ -955,8 +957,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>-1.480496</td>\n",
-       "      <td>-0.608690</td>\n",
+       "      <td>-1.503328</td>\n",
+       "      <td>-0.616902</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>38923</th>\n",
@@ -979,12 +981,12 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>-1.545324</td>\n",
-       "      <td>-0.987361</td>\n",
+       "      <td>-1.568289</td>\n",
+       "      <td>-1.071190</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 730 columns</p>\n",
+       "<p>5 rows × 622 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1010,13 +1012,13 @@
        "38923  ...          0.0          0.0          0.0          0.0          0.0   \n",
        "\n",
        "       cat__RELP_7  cat__RELP_8  cat__RELP_9  num__AGEP  num__WKHP  \n",
-       "22422          0.0          0.0          0.0   1.242279   0.148651  \n",
-       "25747          0.0          0.0          0.0   1.501591  -2.274840  \n",
-       "13795          0.0          0.0          0.0   0.399515   0.148651  \n",
-       "68724          0.0          0.0          0.0  -1.480496  -0.608690  \n",
-       "38923          0.0          0.0          0.0  -1.545324  -0.987361  \n",
+       "22422          0.0          0.0          0.0   1.225035   0.140245  \n",
+       "25747          0.0          0.0          0.0   1.484879  -2.282626  \n",
+       "13795          0.0          0.0          0.0   0.315581   0.064531  \n",
+       "68724          0.0          0.0          0.0  -1.503328  -0.616902  \n",
+       "38923          0.0          0.0          0.0  -1.568289  -1.071190  \n",
        "\n",
-       "[5 rows x 730 columns]"
+       "[5 rows x 622 columns]"
       ]
      },
      "metadata": {},
@@ -1106,8 +1108,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.853311</td>\n",
-       "      <td>0.148651</td>\n",
+       "      <td>0.640386</td>\n",
+       "      <td>-0.162614</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25747</th>\n",
@@ -1130,8 +1132,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.269859</td>\n",
-       "      <td>1.284662</td>\n",
+       "      <td>0.120698</td>\n",
+       "      <td>0.821678</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13795</th>\n",
@@ -1154,8 +1156,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>-0.961872</td>\n",
-       "      <td>0.148651</td>\n",
+       "      <td>-0.983640</td>\n",
+       "      <td>0.140245</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>68724</th>\n",
@@ -1178,8 +1180,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>-0.637732</td>\n",
-       "      <td>-2.577777</td>\n",
+       "      <td>-0.658835</td>\n",
+       "      <td>-2.585484</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>38923</th>\n",
@@ -1202,12 +1204,12 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.723655</td>\n",
-       "      <td>0.527321</td>\n",
+       "      <td>0.510464</td>\n",
+       "      <td>0.215960</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 730 columns</p>\n",
+       "<p>5 rows × 622 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1233,13 +1235,13 @@
        "38923  ...          0.0          0.0          0.0          0.0          0.0   \n",
        "\n",
        "       cat__RELP_7  cat__RELP_8  cat__RELP_9  num__AGEP  num__WKHP  \n",
-       "22422          0.0          0.0          0.0   0.853311   0.148651  \n",
-       "25747          0.0          0.0          0.0   0.269859   1.284662  \n",
-       "13795          0.0          0.0          0.0  -0.961872   0.148651  \n",
-       "68724          0.0          0.0          0.0  -0.637732  -2.577777  \n",
-       "38923          0.0          0.0          0.0   0.723655   0.527321  \n",
+       "22422          0.0          0.0          0.0   0.640386  -0.162614  \n",
+       "25747          0.0          0.0          0.0   0.120698   0.821678  \n",
+       "13795          0.0          0.0          0.0  -0.983640   0.140245  \n",
+       "68724          0.0          0.0          0.0  -0.658835  -2.585484  \n",
+       "38923          0.0          0.0          0.0   0.510464   0.215960  \n",
        "\n",
-       "[5 rows x 730 columns]"
+       "[5 rows x 622 columns]"
       ]
      },
      "metadata": {},
@@ -1249,22 +1251,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023/10/22, 18:41:17: Tuning RandomForestClassifier...\n",
-      "2023/10/22, 18:46:07: Tuning for RandomForestClassifier is finished [F1 score = 0.6448662703849747, Accuracy = 0.702970297029703]\n"
+      "2023/11/05, 15:08:50: Tuning RandomForestClassifier...\n",
+      "2023/11/05, 15:11:16: Tuning for RandomForestClassifier is finished [F1 score = 0.7879557900547492, Accuracy = 0.7880002920018442]\n",
+      "\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-22 18:46:07 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
+      "2023-11-05 15:11:16 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
       "INFO:root:Models are tuned and saved to a file\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c15cc3758b60427888c874885f57c4ad",
+       "model_id": "3c7411c2ff5c40dda9470a8843ba1881",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1278,7 +1281,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a1af724bbf9444b09f313c57f1f001d5",
+       "model_id": "0c37f6ebc32f484ea4bb69546bd7a4dd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1310,7 +1313,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7721a9d8",
+   "id": "65998941",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -1319,7 +1322,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "f8ba8f84",
+   "id": "70f2097d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1340,7 +1343,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "ce630510",
+   "id": "c10a901b",
    "metadata": {},
    "outputs": [
     {
@@ -2416,7 +2419,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ba1c259",
+   "id": "66c919a0",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -2425,7 +2428,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d17b2de",
+   "id": "92b57b33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2446,7 +2449,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cefa0d4e",
+   "id": "cdbebce4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2469,7 +2472,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9200fd3",
+   "id": "f4844381",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -2478,7 +2481,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62036048",
+   "id": "40bae4da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2499,7 +2502,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76fed36e",
+   "id": "01b9d5b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2522,7 +2525,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6271cf1",
+   "id": "d5286c6b",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -2531,7 +2534,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb4fe98a",
+   "id": "27ab3ca2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2552,7 +2555,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11ec5d91",
+   "id": "a8accf2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2575,7 +2578,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10c2d423",
+   "id": "50b5f322",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -2584,7 +2587,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f95477be",
+   "id": "d495f7db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2605,7 +2608,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49d2d27a",
+   "id": "76ed79ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2629,7 +2632,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "e2350f59",
+   "id": "e2285697",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:39:24.699770Z",
