--- a/notebooks/out_of_domain_uncertainty_rich_income_2K/Income_2018.ipynb
+++ b/notebooks/out_of_domain_uncertainty_rich_income_2K/Income_2018.ipynb
@@ -673,9 +673,12 @@
    },
    "outputs": [],
    "source": [
-    "# tuned_params_filenames = ['tuning_results_Folktables_NY_2018_Employment_alpha_0.8_20230706__115508.csv']\n",
-    "# tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME, tuned_params_filename)\n",
-    "#                          for tuned_params_filename in tuned_params_filenames]"
+    "tuned_params_filenames = [\n",
+    "    'tuning_results_Folktables_2018_Income_alpha_0.0_exp_iter_1_20231105__131605.csv',\n",
+    "    'tuning_results_Folktables_2018_Income_alpha_0.7_exp_iter_1_20231105__134806.csv'\n",
+    "]\n",
+    "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME, tuned_params_filename)\n",
+    "                         for tuned_params_filename in tuned_params_filenames]"
    ]
   },
   {
@@ -693,7 +696,7 @@
     "# Configs for an experiment iteration\n",
     "exp_iter_num = 1\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
-    "custom_table_fields_dct['experiment_iteration'] = f'Exp_iter_{exp_iter_num}'\n",
+    "custom_table_fields_dct['experiment_iteration'] = f'Exp_iter_{exp_iter_num + 6}'\n",
     "\n",
     "exp_iter_data_loader = copy.deepcopy(data_loader_rich)  # Add deepcopy to avoid data leakage\n",
     "exp_extra_data_loaders = copy.deepcopy(extra_data_loaders)  # Add deepcopy to avoid data leakage\n",
@@ -727,9 +730,7 @@
       " 'experiment_iteration': 'Exp_iter_1',\n",
       " 'fair_intervention_params_lst': '[0.0, 0.7]',\n",
       " 'model_init_seed': 100,\n",
-      " 'session_uuid': 'f7a3110f-c143-42f9-ae1c-a5b0d6c4d9e2'}\n",
-      "\n",
-      "\n"
+      " 'session_uuid': 'f7a3110f-c143-42f9-ae1c-a5b0d6c4d9e2'}\n"
      ]
     },
     {
@@ -1246,8 +1247,7 @@
      "output_type": "stream",
      "text": [
       "2023/11/05, 08:14:52: Tuning RandomForestClassifier...\n",
-      "2023/11/05, 08:16:05: Tuning for RandomForestClassifier is finished [F1 score = 0.7754889795396488, Accuracy = 0.7754891323107215]\n",
-      "\n"
+      "2023/11/05, 08:16:05: Tuning for RandomForestClassifier is finished [F1 score = 0.7754889795396488, Accuracy = 0.7754891323107215]\n"
      ]
     },
     {
@@ -1735,8 +1735,7 @@
      "output_type": "stream",
      "text": [
       "2023/11/05, 08:46:56: Tuning RandomForestClassifier...\n",
-      "2023/11/05, 08:48:06: Tuning for RandomForestClassifier is finished [F1 score = 0.7744722726201013, Accuracy = 0.7744888816852834]\n",
-      "\n"
+      "2023/11/05, 08:48:06: Tuning for RandomForestClassifier is finished [F1 score = 0.7744722726201013, Accuracy = 0.7744888816852834]\n"
      ]
     },
     {
@@ -1778,9 +1777,9 @@
     "                                                 models_params_for_tuning=models_params_for_tuning,\n",
     "                                                 metrics_computation_config=metrics_computation_config,\n",
     "                                                 custom_table_fields_dct=custom_table_fields_dct,\n",
-    "                                                 with_tuning=True,\n",
-    "                                                 # with_tuning=False,\n",
-    "                                                 # tuned_params_df_paths=tuned_params_df_paths,\n",
+    "                                                 # with_tuning=True,\n",
+    "                                                 with_tuning=False,\n",
+    "                                                 tuned_params_df_paths=tuned_params_df_paths,\n",
     "                                                 save_results_dir_path=SAVE_RESULTS_DIR_PATH,\n",
     "                                                 train_set_subsample_size=TRAIN_SET_SUBSAMPLE_SIZE,\n",
     "                                                 verbose=True)"
@@ -1805,10 +1804,12 @@
     "exp_iter_num = 2\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
+    "    'tuning_results_Folktables_2018_Income_alpha_0.0_exp_iter_1_20231105__131605.csv',\n",
+    "    'tuning_results_Folktables_2018_Income_alpha_0.7_exp_iter_1_20231105__134806.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME, tuned_params_filename)\n",
     "                         for tuned_params_filename in tuned_params_filenames]\n",
-    "custom_table_fields_dct['experiment_iteration'] = f'Exp_iter_{exp_iter_num}'\n",
+    "custom_table_fields_dct['experiment_iteration'] = f'Exp_iter_{exp_iter_num + 6}'\n",
     "\n",
     "exp_iter_data_loader = copy.deepcopy(data_loader_rich)  # Add deepcopy to avoid data leakage\n",
     "exp_extra_data_loaders = copy.deepcopy(extra_data_loaders)  # Add deepcopy to avoid data leakage\n",
@@ -2911,10 +2912,12 @@
     "exp_iter_num = 3\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
+    "    'tuning_results_Folktables_2018_Income_alpha_0.0_exp_iter_1_20231105__131605.csv',\n",
+    "    'tuning_results_Folktables_2018_Income_alpha_0.7_exp_iter_1_20231105__134806.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME, tuned_params_filename)\n",
     "                         for tuned_params_filename in tuned_params_filenames]\n",
-    "custom_table_fields_dct['experiment_iteration'] = f'Exp_iter_{exp_iter_num}'\n",
+    "custom_table_fields_dct['experiment_iteration'] = f'Exp_iter_{exp_iter_num + 6}'\n",
     "\n",
     "exp_iter_data_loader = copy.deepcopy(data_loader_rich)  # Add deepcopy to avoid data leakage\n",
     "exp_extra_data_loaders = copy.deepcopy(extra_data_loaders)  # Add deepcopy to avoid data leakage\n",
@@ -2964,10 +2967,12 @@
     "exp_iter_num = 4\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
+    "    'tuning_results_Folktables_2018_Income_alpha_0.0_exp_iter_1_20231105__131605.csv',\n",
+    "    'tuning_results_Folktables_2018_Income_alpha_0.7_exp_iter_1_20231105__134806.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME, tuned_params_filename)\n",
     "                         for tuned_params_filename in tuned_params_filenames]\n",
-    "custom_table_fields_dct['experiment_iteration'] = f'Exp_iter_{exp_iter_num}'\n",
+    "custom_table_fields_dct['experiment_iteration'] = f'Exp_iter_{exp_iter_num + 6}'\n",
     "\n",
     "exp_iter_data_loader = copy.deepcopy(data_loader_rich)  # Add deepcopy to avoid data leakage\n",
     "exp_extra_data_loaders = copy.deepcopy(extra_data_loaders)  # Add deepcopy to avoid data leakage\n",
@@ -3017,10 +3022,12 @@
     "exp_iter_num = 5\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
+    "    'tuning_results_Folktables_2018_Income_alpha_0.0_exp_iter_1_20231105__131605.csv',\n",
+    "    'tuning_results_Folktables_2018_Income_alpha_0.7_exp_iter_1_20231105__134806.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME, tuned_params_filename)\n",
     "                         for tuned_params_filename in tuned_params_filenames]\n",
-    "custom_table_fields_dct['experiment_iteration'] = f'Exp_iter_{exp_iter_num}'\n",
+    "custom_table_fields_dct['experiment_iteration'] = f'Exp_iter_{exp_iter_num + 6}'\n",
     "\n",
     "exp_iter_data_loader = copy.deepcopy(data_loader_rich)  # Add deepcopy to avoid data leakage\n",
     "exp_extra_data_loaders = copy.deepcopy(extra_data_loaders)  # Add deepcopy to avoid data leakage\n",
@@ -3070,10 +3077,12 @@
     "exp_iter_num = 6\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
+    "    'tuning_results_Folktables_2018_Income_alpha_0.0_exp_iter_1_20231105__131605.csv',\n",
+    "    'tuning_results_Folktables_2018_Income_alpha_0.7_exp_iter_1_20231105__134806.csv'\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME, tuned_params_filename)\n",
     "                         for tuned_params_filename in tuned_params_filenames]\n",
-    "custom_table_fields_dct['experiment_iteration'] = f'Exp_iter_{exp_iter_num}'\n",
+    "custom_table_fields_dct['experiment_iteration'] = f'Exp_iter_{exp_iter_num + 6}'\n",
     "\n",
     "exp_iter_data_loader = copy.deepcopy(data_loader_rich)  # Add deepcopy to avoid data leakage\n",
     "exp_extra_data_loaders = copy.deepcopy(extra_data_loaders)  # Add deepcopy to avoid data leakage\n",
