--- a/notebooks/out_of_domain_uncertainty_rich_income_LR_30K/Income_2018.ipynb
+++ b/notebooks/out_of_domain_uncertainty_rich_income_LR_30K/Income_2018.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "69e21bba",
+   "id": "51596f0d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.270469Z",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6965ba11",
+   "id": "d4555a3c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.270732Z",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8deca070",
+   "id": "5843a23a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.270792Z",
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "71368959",
+   "id": "772bab04",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.270840Z",
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6c6dfb2f",
+   "id": "491bd3bf",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.270874Z",
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3c85593e",
+   "id": "e7e135c4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:25:57.069492Z",
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "bb410eb2",
+   "id": "7773e18e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:25:57.078509Z",
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b05598bb",
+   "id": "540a264d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:25:57.090848Z",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "633432d3",
+   "id": "dd253533",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f1a0b628",
+   "id": "c830ca6c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:25:59.494619Z",
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "770a4637",
+   "id": "26a55821",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7ed2ce2c",
+   "id": "5eaaf0c0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:25:59.520955Z",
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37d4d489",
+   "id": "cf433d2e",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -229,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b8179917",
+   "id": "c6fe188a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:00.348893Z",
@@ -259,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "cf29cd0e",
+   "id": "1fd5f828",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:01.513908Z",
@@ -276,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "feb67664",
+   "id": "b31b03b1",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:23.962524Z",
@@ -288,7 +288,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current session uuid:  980128a7-9cdb-486e-bf95-e2b9a391271c\n"
+      "Current session uuid:  42b1bd0f-6dbe-479d-906f-902f13ce7049\n"
      ]
     }
    ],
@@ -297,14 +297,14 @@
     "\n",
     "custom_table_fields_dct = {\n",
     "#     'session_uuid': str(uuid.uuid4()),\n",
-    "    'session_uuid': '',\n",
+    "    'session_uuid': '42b1bd0f-6dbe-479d-906f-902f13ce7049',\n",
     "}\n",
     "print('Current session uuid: ', custom_table_fields_dct['session_uuid'])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e0e86199",
+   "id": "cda0eec7",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "13857567",
+   "id": "738e3649",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:29.420462Z",
@@ -447,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "87f4e148",
+   "id": "16ce577e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:29.487761Z",
@@ -473,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "eedec4fd",
+   "id": "6fbf04dd",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:33.385057Z",
@@ -607,7 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "2aa253fd",
+   "id": "79f15e76",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:33.455677Z",
@@ -633,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "c9871432",
+   "id": "567ec93f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:33.482843Z",
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e1081f9",
+   "id": "675313fe",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0fad8641",
+   "id": "64ab2d6d",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -664,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "66e01176",
+   "id": "0366dbee",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:33.490077Z",
@@ -681,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "98b02249",
+   "id": "3f538e51",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:33.542401Z",
@@ -702,8 +702,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "69579393",
+   "execution_count": null,
+   "id": "6d3bbd9d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:29:42.911821Z",
@@ -715,7 +715,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-26 05:57:15 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2023-11-13 16:35:28 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -725,16 +725,18 @@
      "text": [
       "{'dataset_split_seed': 100,\n",
       " 'experiment_iteration': 'Exp_iter_1',\n",
-      " 'fair_intervention_params_lst': '[0.0]',\n",
+      " 'fair_intervention_params_lst': '[0.7]',\n",
       " 'model_init_seed': 100,\n",
-      " 'session_uuid': '980128a7-9cdb-486e-bf95-e2b9a391271c'}\n"
+      " 'session_uuid': '42b1bd0f-6dbe-479d-906f-902f13ce7049'}\n",
+      "\n",
+      "\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-26 05:57:15 experiment_interface.py INFO    : Start dataset preprocessing\n",
+      "2023-11-13 16:35:28 experiment_interface.py INFO    : Start dataset preprocessing\n",
       "INFO:root:Start dataset preprocessing\n"
      ]
     },
@@ -742,14 +744,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "In-domain full_df.shape --  (40000, 9)\n"
+      "Top indexes of X_train_val:  Int64Index([69976, 19372, 34404, 45923, 59143, 57651, 20972, 73179, 93151,\n",
+      "              103, 96638, 24826, 89574, 45142, 27782, 47830, 40090, 15074,\n",
+      "            40597, 87226],\n",
+      "           dtype='int64')\n",
+      "Top indexes of y_train_val:  Int64Index([69976, 19372, 34404, 45923, 59143, 57651, 20972, 73179, 93151,\n",
+      "              103, 96638, 24826, 89574, 45142, 27782, 47830, 40090, 15074,\n",
+      "            40597, 87226],\n",
+      "           dtype='int64')\n",
+      "\n",
+      "\n",
+      "\n",
+      "In-domain full_df.shape --  (40000, 9)\n",
+      "In-domain init_features_df.shape --  (40000, 10)\n",
+      "In-domain number of rows in X_train_val --  30000\n",
+      "In-domain number of rows in X_test --  10000\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-26 05:57:16 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2023-11-13 16:35:29 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n"
      ]
     },
@@ -757,9 +773,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "In-domain init_features_df.shape --  (40000, 10)\n",
-      "In-domain number of rows in X_train_val --  30000\n",
-      "In-domain number of rows in X_test --  10000\n",
       "Out-of-domain 1 init_features_df.shape --  (100000, 10)\n",
       "Out-of-domain 1 number of rows in X_train_val --  0\n",
       "Out-of-domain 1 number of rows in X_test --  10000\n"
@@ -768,7 +781,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "22f8130fe034495fb1bd6218161775cf",
+       "model_id": "dc78d76da4c645ada292f4fed440baab",
        "version_major": 2,
        "version_minor": 0
       },
@@ -783,7 +796,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-26 05:57:16 experiment_interface.py INFO    : Start fairness intervention\n",
+      "2023-11-13 16:35:29 experiment_interface.py INFO    : Start fairness intervention\n",
       "INFO:root:Start fairness intervention\n"
      ]
     },
@@ -791,14 +804,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "intervention_param:  0.0\n"
+      "intervention_param:  0.7\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-26 06:00:28 experiment_interface.py INFO    : Fairness intervention is completed\n",
+      "2023-11-13 16:39:41 experiment_interface.py INFO    : Fairness intervention is completed\n",
       "INFO:root:Fairness intervention is completed\n"
      ]
     },
@@ -931,8 +944,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.393823</td>\n",
-       "      <td>0.151363</td>\n",
+       "      <td>0.328909</td>\n",
+       "      <td>0.074163</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>68724</th>\n",
@@ -980,7 +993,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>-1.553611</td>\n",
-       "      <td>-1.006636</td>\n",
+       "      <td>-1.083836</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1012,9 +1025,9 @@
        "       cat__RELP_7  cat__RELP_8  cat__RELP_9  num__AGEP  num__WKHP  \n",
        "22422          0.0          0.0          0.0   1.237711   0.151363  \n",
        "25747          0.0          0.0          0.0   1.497369  -2.319035  \n",
-       "13795          0.0          0.0          0.0   0.393823   0.151363  \n",
+       "13795          0.0          0.0          0.0   0.328909   0.074163  \n",
        "68724          0.0          0.0          0.0  -1.488696  -0.620636  \n",
-       "38923          0.0          0.0          0.0  -1.553611  -1.006636  \n",
+       "38923          0.0          0.0          0.0  -1.553611  -1.083836  \n",
        "\n",
        "[5 rows x 780 columns]"
       ]
@@ -1106,8 +1119,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.848224</td>\n",
-       "      <td>0.151363</td>\n",
+       "      <td>0.653481</td>\n",
+       "      <td>-0.157436</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25747</th>\n",
@@ -1130,8 +1143,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.263994</td>\n",
-       "      <td>1.309363</td>\n",
+       "      <td>0.134165</td>\n",
+       "      <td>0.846163</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13795</th>\n",
@@ -1202,8 +1215,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.718395</td>\n",
-       "      <td>0.537363</td>\n",
+       "      <td>0.523652</td>\n",
+       "      <td>0.228563</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1233,11 +1246,11 @@
        "38923  ...          0.0          0.0          0.0          0.0          0.0   \n",
        "\n",
        "       cat__RELP_7  cat__RELP_8  cat__RELP_9  num__AGEP  num__WKHP  \n",
-       "22422          0.0          0.0          0.0   0.848224   0.151363  \n",
-       "25747          0.0          0.0          0.0   0.263994   1.309363  \n",
+       "22422          0.0          0.0          0.0   0.653481  -0.157436  \n",
+       "25747          0.0          0.0          0.0   0.134165   0.846163  \n",
        "13795          0.0          0.0          0.0  -0.969381   0.151363  \n",
        "68724          0.0          0.0          0.0  -0.644808  -2.627835  \n",
-       "38923          0.0          0.0          0.0   0.718395   0.537363  \n",
+       "38923          0.0          0.0          0.0   0.523652   0.228563  \n",
        "\n",
        "[5 rows x 780 columns]"
       ]
@@ -1249,22 +1262,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023/10/26, 06:00:28: Tuning RandomForestClassifier...\n",
-      "2023/10/26, 06:41:52: Tuning for RandomForestClassifier is finished [F1 score = 0.8057217659801331, Accuracy = 0.8059]\n"
+      "2023/11/13, 16:39:41: Tuning LogisticRegression...\n",
+      "2023/11/13, 16:41:20: Tuning for LogisticRegression is finished [F1 score = 0.8089958073664775, Accuracy = 0.8091333333333334]\n",
+      "\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-26 06:41:52 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
+      "2023-11-13 16:41:20 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
       "INFO:root:Models are tuned and saved to a file\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "350efbc6853d445185a39884869abe1c",
+       "model_id": "aa1dd2a914bb4ef191a7f8b15e6e3fab",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1278,7 +1292,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6618920903ae416684df2ecebce4e869",
+       "model_id": "42dc734b0c654f45b9afa540d9163fb0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1310,7 +1324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6fb9e9db",
+   "id": "c0708a2c",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -1319,7 +1333,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "aa3d1e90",
+   "id": "859e5d72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1340,7 +1354,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "7aed8f7b",
+   "id": "3dc5b6ec",
    "metadata": {},
    "outputs": [
     {
@@ -2416,7 +2430,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20f809b1",
+   "id": "f3a00793",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -2425,7 +2439,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee0f778f",
+   "id": "1a9ce28d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2446,7 +2460,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e7f417e",
+   "id": "ed2a9d72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2469,7 +2483,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e88ee0b0",
+   "id": "f051e759",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -2478,7 +2492,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb7241d5",
+   "id": "f64ad854",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2499,7 +2513,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7646114f",
+   "id": "77294f0c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2522,7 +2536,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df7e16b8",
+   "id": "49e24b93",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -2531,7 +2545,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55d3a63b",
+   "id": "320e49a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2552,7 +2566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b6add57",
+   "id": "1f735b20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2575,7 +2589,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e23074d0",
+   "id": "3293ae78",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -2584,7 +2598,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4bb7d33",
+   "id": "297e2cff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2605,7 +2619,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b155ed55",
+   "id": "80e4fb91",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2629,7 +2643,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "98c3a5c4",
+   "id": "55cfa834",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:39:24.699770Z",
